# AdventOfCode2025

./: .gitignore  CMakeLists.txt
days/: CMakeLists.txt
days/00/: answer.txt  solution.cpp  solution.hpp
days/01/: solution.cpp  solution.hpp
days/02/: answer.txt  solution.cpp  solution.hpp
days/03/: answer.txt  solution.cpp  solution.hpp
days/04/: answer.txt  solution.cpp  solution.hpp
days/05/: answer.txt  solution.cpp  solution.hpp
days/06/: answer.txt  solution.cpp  solution.hpp
days/07/: answer.txt  solution.cpp  solution.hpp
days/08/: answer.txt  solution.cpp  solution.hpp
days/09/: answer.txt  solution.cpp  solution.hpp
days/11/: answer.txt  solution.cpp  solution.hpp
include/: common.hpp
src/: main.cpp
